# rps-rs-bot-test

./: Cargo.toml
src/: main.rs
