[package]
name = "rps-rs-bot-test"
version = "0.1.0"
authors = ["ileukocyte"]
edition = "2021"
categories = ["discord-bot"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.*"
tokio = { version = "1.21.*", features = ["full"] }
tracing = "0.1.*"
tracing-subscriber = "0.3.*"

[dependencies.serenity]
version = "0.11.*"
default-features = false
features = [
    "builder",
    "cache",
    "collector",
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
    "time",
    "unstable_discord_api",
    "utils",
]
